ARMv7 NEON compiler detect in configure.ac for my Raspberry Pi 2

--- a/configure.ac
+++ b/configure.ac
@@ -137,6 +137,13 @@ AM_CONDITIONAL([HAVE_CPU_AVX2],[test $HAVE_CPU_AVX2 = 1])
 AC_DEFINE_UNQUOTED([HAVE_CPU_AVX2],[$HAVE_CPU_AVX2],[Has AVX2 CPU extension])
 if test $HAVE_CPU_AVX2 = 1; then CPU_AVX2_CFLAGS+=-mavx2; fi
 
+HAVE_CPU_ARM_NEON=$HAVE_ARM_NEON_H
+AC_SUBST(HAVE_CPU_ARM_NEON)
+AC_SUBST(CPU_ARM_NEON_CFLAGS)
+AM_CONDITIONAL([HAVE_CPU_ARM_NEON],[test $HAVE_CPU_ARM_NEON = 1])
+AC_DEFINE_UNQUOTED([HAVE_CPU_ARM_NEON],[$HAVE_CPU_ARM_NEON],[Has ARM NEON CPU extension])
+if test $HAVE_CPU_ARM_NEON = 1; then CPU_ARM_NEON_CFLAGS+=-mfpu=neon; fi
+
 AC_SUBST(CFLAGS)
 AC_SUBST(CXXFLAGS)
 AC_SUBST(LDFLAGS)
@@ -373,6 +380,23 @@ AC_SUBST(HAVE_AVXINTRIN_H)
 AC_CHECK_HEADER([avxintrin.h],[HAVE_AVXINTRIN_H=1],[HAVE_AVXINTRIN_H=0])
 AM_CONDITIONAL([HAVE_AVXINTRIN_H],[test $HAVE_AVXINTRIN_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_AVXINTRIN_H],[$HAVE_AVXINTRIN_H],[Has avxintrin.h])
+
+# Does your compiler have arm_neon.h (ARM NEON intrinsics)?
+# GCC (well, the header) won't let us try unless we specify -mfpu=neon
+old_CXXFLAGS=$CXXFLAGS
+old_CPPFLAGS=$CPPFLAGS
+old_CFLAGS=$CFLAGS
+CXXFLAGS+=" -mfpu=neon"
+CPPFLAGS+=" -mfpu=neon"
+CFLAGS+=" -mfpu=neon"
+HAVE_ARM_NEON_H=0
+AC_SUBST(HAVE_ARM_NEON_H)
+AC_CHECK_HEADER([arm_neon.h],[HAVE_ARM_NEON_H=1],[HAVE_ARM_NEON_H=0])
+AM_CONDITIONAL([HAVE_ARM_NEON_H],[test $HAVE_ARM_NEON_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_ARM_NEON_H],[$HAVE_ARM_NEON_H],[Has arm_neon.h])
+CXXFLAGS=$old_CXXFLAGS
+CPPFLAGS=$old_CPPFLAGS
+CFLAGS=$old_CFLAGS
 
 # Does your compiler have endian.h?
 HAVE_ENDIAN_H=0
