--- a/configure.ac
+++ b/configure.ac
@@ -331,6 +331,14 @@ AC_TRY_LINK(
 AM_CONDITIONAL([HAVE_GCC_ASM],[test $HAVE_GCC_ASM = 1])
 AC_DEFINE_UNQUOTED([HAVE_GCC_ASM],[$HAVE_GCC_ASM],[Has GCC __asm__])
 
+# should we use __asm__?
+USE_ASM=$HAVE_GCC_ASM # by default, yes, if the compiler provides it
+AC_ARG_WITH(gcc-asm,AS_HELP_STRING([--asm],[Use inline assembly]),[],[with_asm=yes])
+AC_SUBST(USE_ASM)
+if test "$with_asm" = "no"; then USE_ASM=0; fi
+AC_DEFINE_UNQUOTED([USE_ASM],[$USE_ASM],[Use inline assembly])
+AM_CONDITIONAL([USE_ASM],[test $USE_ASM = 1])
+
 # Does Linux have sys/vm86.h for virtual 8086 mode?
 HAVE_SYS_VM86_H=0
 AC_SUBST(HAVE_SYS_VM86_H)
