--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 
 noinst_LIBRARIES = \
 	dosboxxr/lib/hostcpudetect/libhostcpudetect.a \
+	dosboxxr/lib/graphics/libstretchblt.a \
 	dosboxxr/lib/util/libutil.a \
 	dosboxxr/lib/text/libtext.a \
 	dosboxxr/lib/cpu/libcpu.a
@@ -14,6 +15,12 @@ dosboxxr_lib_text_libtext_a_SOURCES = dosboxxr/lib/text/chomp.c
 dosboxxr_lib_util_libutil_a_SOURCES = \
 	dosboxxr/lib/util/nr_wfpack_scale.cpp \
 	dosboxxr/lib/util/rgb_bitmap_test_pattern_1.cpp
+
+dosboxxr_lib_graphics_libstretchblt_a_SOURCES = \
+	dosboxxr/lib/graphics/stretchblt_neighbor.cpp \
+	dosboxxr/lib/graphics/stretchblt_bilinear.cpp \
+	dosboxxr/lib/graphics/stretchblt_bilinear_mmx.cpp \
+	dosboxxr/lib/graphics/stretchblt_bilinear_sse.cpp
 
 OPCC=bin/tools/opcc
 
@@ -136,9 +143,14 @@ bin_test_xlib2_SOURCES = test/xlib2.cpp
 bin_test_xlib2_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS) $(CPU_MMX_CFLAGS) $(CPU_SSE2_CFLAGS) $(CPU_AVX2_CFLAGS) $(CPU_ARM_NEON_CFLAGS)
 bin_test_xlib2_DEPENDENCIES = \
 	dosboxxr/lib/hostcpudetect/libhostcpudetect.a \
+	dosboxxr/lib/graphics/libstretchblt.a \
 	dosboxxr/lib/util/libutil.a \
 	dosboxxr/lib/text/libtext.a
-bin_test_xlib2_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS) dosboxxr/lib/hostcpudetect/libhostcpudetect.a dosboxxr/lib/text/libtext.a dosboxxr/lib/util/libutil.a
+bin_test_xlib2_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS) \
+	dosboxxr/lib/hostcpudetect/libhostcpudetect.a \
+	dosboxxr/lib/graphics/libstretchblt.a \
+	dosboxxr/lib/text/libtext.a \
+	dosboxxr/lib/util/libutil.a
 
 bin_test_xcb1_SOURCES = test/xcb1.cpp
 bin_test_xcb1_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS) $(X11_XCB_CFLAGS) $(XCB_SHM_CFLAGS)
