move out ARM NEON, not yet tested

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,8 @@ dosboxxr_lib_graphics_libstretchblt_a_SOURCES = \
 	dosboxxr/lib/graphics/stretchblt_bilinear.cpp \
 	dosboxxr/lib/graphics/stretchblt_bilinear_mmx.cpp \
 	dosboxxr/lib/graphics/stretchblt_bilinear_sse.cpp \
-	dosboxxr/lib/graphics/stretchblt_bilinear_avx.cpp
+	dosboxxr/lib/graphics/stretchblt_bilinear_avx.cpp \
+	dosboxxr/lib/graphics/stretchblt_bilinear_arm_neon.cpp
 
 OPCC=bin/tools/opcc
 
