--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,8 @@ dosboxxr_lib_text_libtext_a_SOURCES = dosboxxr/lib/text/chomp.c
 
 dosboxxr_lib_util_libutil_a_SOURCES = \
 	dosboxxr/lib/util/nr_wfpack_scale.cpp \
-	dosboxxr/lib/util/rgb_bitmap_test_pattern_1.cpp
+	dosboxxr/lib/util/rgb_bitmap_test_pattern_1.cpp \
+	dosboxxr/lib/util/rgb_bitmap_test_pattern_gradients.cpp
 
 dosboxxr_lib_graphics_libstretchblt_a_CXXFLAGS = \
 	$(AM_CXXFLAGS) $(CPU_MMX_CFLAGS) $(CPU_SSE2_CFLAGS) $(CPU_AVX2_CFLAGS) $(CPU_ARM_NEON_CFLAGS)
@@ -141,8 +142,10 @@ bin_test_xlibxcbopengl_LDADD = $(X11_LDFLAGS) $(OPENGL_LDFLAGS) $(OPENGL_GLU_LDF
 
 bin_test_xlib1_SOURCES = test/xlib1.cpp
 bin_test_xlib1_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS)
-bin_test_xlib1_DEPENDENCIES =
-bin_test_xlib1_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS)
+bin_test_xlib1_DEPENDENCIES = \
+	dosboxxr/lib/util/libutil.a
+bin_test_xlib1_LDADD = $(X11_LDFLAGS) $(XEXT_LDFLAGS) \
+	dosboxxr/lib/util/libutil.a
 
 bin_test_xlib2_SOURCES = test/xlib2.cpp
 bin_test_xlib2_CXXFLAGS = $(AM_CXXFLAGS) $(X11_CFLAGS) $(XEXT_CFLAGS)
