Linux framebuffer header test

--- a/configure.ac
+++ b/configure.ac
@@ -367,6 +367,13 @@ AC_CHECK_HEADER([linux/kvm.h],[HAVE_LINUX_KVM_H=1],[HAVE_LINUX_KVM_H=0])
 AM_CONDITIONAL([HAVE_LINUX_KVM_H],[test $HAVE_LINUX_KVM_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_LINUX_KVM_H],[$HAVE_LINUX_KVM_H],[Has linux/kvm.h])
 
+# Does Linux have linux/fb.h for the framebuffer?
+HAVE_LINUX_FB_H=0
+AC_SUBST(HAVE_LINUX_FB_H)
+AC_CHECK_HEADER([linux/fb.h],[HAVE_LINUX_FB_H=1],[HAVE_LINUX_FB_H=0])
+AM_CONDITIONAL([HAVE_LINUX_FB_H],[test $HAVE_LINUX_FB_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_LINUX_FB_H],[$HAVE_LINUX_FB_H],[Has linux/fb.h])
+
 # Does Linux have sys/prctl.h?
 HAVE_SYS_PRCTL_H=0
 AC_SUBST(HAVE_SYS_PRCTL_H)
