--- a/configure.ac
+++ b/configure.ac
@@ -374,6 +374,13 @@ AC_CHECK_HEADER([linux/fb.h],[HAVE_LINUX_FB_H=1],[HAVE_LINUX_FB_H=0])
 AM_CONDITIONAL([HAVE_LINUX_FB_H],[test $HAVE_LINUX_FB_H = 1])
 AC_DEFINE_UNQUOTED([HAVE_LINUX_FB_H],[$HAVE_LINUX_FB_H],[Has linux/fb.h])
 
+# Does Linux have termios.h?
+HAVE_TERMIOS_H=0
+AC_SUBST(HAVE_TERMIOS_H)
+AC_CHECK_HEADER([termios.h],[HAVE_TERMIOS_H=1],[HAVE_TERMIOS_H=0])
+AM_CONDITIONAL([HAVE_TERMIOS_H],[test $HAVE_TERMIOS_H = 1])
+AC_DEFINE_UNQUOTED([HAVE_TERMIOS_H],[$HAVE_TERMIOS_H],[Has termios.h])
+
 # Does Linux have sys/prctl.h?
 HAVE_SYS_PRCTL_H=0
 AC_SUBST(HAVE_SYS_PRCTL_H)
