--- a/configure.ac
+++ b/configure.ac
@@ -570,8 +570,8 @@ if test "$with_x11_xcb" = "yes"; then
     if test "$HAVE_X11_XCB" = 0; then
         if test "$IS_MAC_OSX" = 1; then
             AC_CHECK_HEADER([xcb/xcb.h],[HAVE_X11_XCB=1],[])
-            XEXT_CFLAGS=""
-            XEXT_LDFLAGS=" -lX11-xcb -lX11 -lxcb"
+            X11_XCB_CFLAGS=""
+            X11_XCB_LDFLAGS=" -lX11-xcb -lX11 -lxcb"
         fi
     fi
 
@@ -603,8 +603,8 @@ if test "$with_xcb" = "yes"; then
     if test "$HAVE_XCB" = 0; then
         if test "$IS_MAC_OSX" = 1; then
             AC_CHECK_HEADER([xcb/xcb.h],[HAVE_XCB=1],[])
-            XEXT_CFLAGS=""
-            XEXT_LDFLAGS=" -lxcb"
+            XCB_CFLAGS=""
+            XCB_LDFLAGS=" -lxcb"
         fi
     fi
 
@@ -628,16 +628,16 @@ if test "$with_xcb_xv" = "yes"; then
     if test "$HAVE_PKGCONFIG" = 1; then
         if pkg-config --atleast-version=1.11 xcb-xv; then
             HAVE_XCB_XV=1
-            XCB_CFLAGS=`pkg-config --cflags xcb-xv`
-            XCB_LDFLAGS=`pkg-config --libs xcb-xv`
+            XCB_XV_CFLAGS=`pkg-config --cflags xcb-xv`
+            XCB_XV_LDFLAGS=`pkg-config --libs xcb-xv`
         fi
     fi
 
     if test "$HAVE_XCB_XV" = 0; then
         if test "$IS_MAC_OSX" = 1; then
             AC_CHECK_HEADER([xcb/xv.h],[HAVE_XCB_XV=1],[])
-            XEXT_CFLAGS=""
-            XEXT_LDFLAGS=" -lxcb"
+            XCB_XV_CFLAGS=""
+            XCB_XV_LDFLAGS=" -lxcb"
         fi
     fi
 
@@ -669,8 +669,8 @@ if test "$with_xcb_shm" = "yes"; then
     if test "$HAVE_XCB_SHM" = 0; then
         if test "$IS_MAC_OSX" = 1; then
             AC_CHECK_HEADER([xcb/shm.h],[HAVE_XCB_SHM=1],[])
-            XEXT_CFLAGS=""
-            XEXT_LDFLAGS=" -lxcb-shm"
+            XCB_SHM_CFLAGS=""
+            XCB_SHM_LDFLAGS=" -lxcb-shm"
         fi
     fi
 
@@ -702,8 +702,8 @@ if test "$with_xcb_xkb" = "yes"; then
     if test "$HAVE_XCB_XKB" = 0; then
         if test "$IS_MAC_OSX" = 1; then
             AC_CHECK_HEADER([xcb/xkb.h],[HAVE_XCB_XKB=1],[])
-            XEXT_CFLAGS=""
-            XEXT_LDFLAGS=" -lxcb-xkb"
+            XCB_XKB_CFLAGS=""
+            XCB_XKB_LDFLAGS=" -lxcb-xkb"
         fi
     fi
 
